--- a/app1/static/style.css
+++ b/app1/static/style.css
@@ -98,6 +98,14 @@
     font: 25px 'b nazanin', sans-serif;
     color: #004d40;
     }
+.label {
+    float: center;
+    width: 100%;
+    background-color: rgba(0, 80, 50, 0.3);
+    font: 25px 'b nazanin', sans-serif;
+    color: #004d40;
+    }
+
 .item{
     float: right;
     width: 20%;
@@ -140,26 +148,26 @@ h1 {
   margin: 0 0 2rem 0;
   font-size: 1.5rem;
   color: white;
-  font: 25px 'b nazanin', sans-serif;
+  font: 16px 'b nazanin', sans-serif;
 }
 
 img {
   display: block;
   margin: 1rem auto;
   max-width: 100%;
-  font: 700 italic 'Open Sans', sans-serif;
+  font: 16px 'b nazanin', sans-serif;
 }
 
 p {
   padding: 0 2.5rem 2.5rem;
   margin: 0;
-  font: 700 italic 'Open Sans', sans-serif;
+  font: 16px 'b nazanin', sans-serif;
 }
 
 .container-card {
   display: flex;
   flex-wrap: wrap;
-  font: 700 italic 'Open Sans', sans-serif;
+  font: 16px 'b nazanin', sans-serif;
 }
 
 .card {
@@ -169,7 +177,7 @@ p {
   border-radius: 12px;
   overflow: hidden;
   transition: all .2s linear;
-  font: 700 italic 'Open Sans', sans-serif;
+  font: 16px 'b nazanin', sans-serif;
 
 }
 
@@ -177,12 +185,86 @@ p {
   background-color: #4CAF50; /* Green */
   border: none;
   color: white;
+  height: 40px;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font: 16px 'b nazanin', sans-serif;
 }
+
+.button {
+    background-color: #4CAF50; /* Green */
+    float: center;
+    border: none;
+    color: white;
+    height: 40px;
+    padding: 15px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font: 16px 'b nazanin', sans-serif;
+
+}
+.buttonRed {
+    background-color: red; /* Green */
+    margin: auto;
+    border: none;
+    color: white;
+    height: 30px;
+    padding: 0px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font: 16px 'b nazanin', sans-serif;
+}
+.buttonGreen {
+    background-color: green; /* Green */
+    margin: auto;
+    border: none;
+    color: white;
+    height: 30px;
+    padding: 0px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font: 16px 'b nazanin', sans-serif;
+}
+.buttonCheckRed {
+    background-color: red; /* Green */
+    margin: auto;
+    border: none;
+    color: white;
+    height: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font: 16px 'b nazanin', sans-serif;
+}
+.buttonCheckGreen {
+    background-color: green; /* Green */
+    margin: auto;
+    border: none;
+    color: white;
+    height: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font: 16px 'b nazanin', sans-serif;
+}
+
+table {
+  border-collapse: separate;
+}
+
+th, td ,th{
+  text-align: center;
+  border-bottom: 1px solid #ddd;
+}
+
+tr:hover {background-color:#f5f5f5;}
 
 /*.card:hover {
   box-shadow: 2px 8px 45px rgba(0, 0, 0, .15);
@@ -195,13 +277,13 @@ p {
 
 @media screen and (min-width: 600px) {
   .card {
-    flex: 1 1 calc(50% - 2rem);
+    flex: 1 1 calc(100% - 2rem);
   }
 }
 
 @media screen and (min-width: 900px) {
   .card {
-    flex: 1 1 calc(33% - 2rem);
+    flex: 1 1 calc(100% - 2rem);
   }
 }
 
@@ -265,27 +347,5 @@ p {
   display: grid;
   grid-template-columns: auto auto auto auto;
 }
-.button {
-    background-color: #4CAF50; /* Green */
-    float: center;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-}
-table {
-  border-collapse: collapse;
-  width: 100%;
-}
 
-th, td {
-  padding: 8px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
-}
-
-tr:hover {background-color:#f5f5f5;}
 
