--- a/app1/templates/villa.html
+++ b/app1/templates/villa.html
@@ -24,13 +24,18 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA==" crossorigin=""></script
 
+       <!-- map -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
   </head>
 
 <body>
   <div>
       <div class="row" >
           <div class="col s1"></div>
-          <div class="col s10" style="background-color: #ffeb3b;">
+          <div class="col s10" style="background-color: #99ff99;">
               <form action="villa.html">
                   </br>
                   {% if villaCat_list %}
@@ -59,25 +64,25 @@
                   </br>
                   <div class="row" style="font: 18px 'b nazanin', sans-serif; font-weight: bold; color:#000066;">
                       <div class="col s6">
-                          <div class="">
-                                <input style="visibility: hidden;" type="text" id="pcal1" class="pdate"><br>
-                                <label for="extra">از تاریخ:</label><br>
-                                <input type="text" id="extra1" class="pdate wide">
+                          <div style="height: 100px;">
+                                <input type="text" id="pcal1" class="pdate" style="font: 15px 'b nazanin', sans-serif;">
+                                <label style="color: #2d3e52;font: 15px 'b nazanin', sans-serif;" for="extra">تا تاریخ:</label><br>
+                                <input style="visibility: hidden;" type="text" id="extra1" class="pdate wide">
                           </div>
                       </div>
                       <div class="col s6">
-                          <div>
-                                <input style="visibility: hidden;" type="text" id="pcal2" class="pdate"><br>
-                                <label for="extra">از تاریخ:</label><br>
-                                <input type="text" id="extra2" class="pdate wide">
+                          <div style="height: 100px;">
+                                <input type="text" id="pcal2" class="pdate" style="font: 15px 'b nazanin', sans-serif;">
+                                <label style="color: #2d3e52;font: 15px 'b nazanin', sans-serif;" for="extra">از تاریخ:</label><br>
+                                <input style="visibility: hidden;" type="text" id="extra2" class="pdate wide">
                           </div>
                       </div>
                   </div>
                   <script type="text/javascript">
                         var objCal1 = new AMIB.persianCalendar( 'pcal1', {
                                 extraInputID: 'extra1',
-                                extraInputFormat: 'YYYY/MM/DD - yyyy/mm/dd - JD'
-                                //extraInputFormat: 'YYYY/MM/DD'
+                                //extraInputFormat: 'YYYY/MM/DD - yyyy/mm/dd - JD'
+                                extraInputFormat: 'YYYY/MM/DD'
                             }
                         );
                         var objCal2 = new AMIB.persianCalendar( 'pcal2', {
@@ -88,9 +93,16 @@
                         );
                   </script>
                   <script src="{% static 'api/filter/villaFilters.js' %}"></script>
-                  </br>
-                  <input class="button" type="button" onclick="doFilter()" value="اعمال فیلتر" style=" font: 18px 'b nazanin', sans-serif; font-weight: bold; color:red; background-color: #bbff33;" >
-                  <a href="villa.html" class="button" type="button"  style=" font: 18px 'b nazanin', sans-serif; font-weight: bold; color:green; background-color: #ff3333;" > عدم اعمال فیلتر</a>
+                  <div>
+                      <input data-toggle="tooltip" title="اعمال فیلتر" class="buttonGreen" type="button" onclick="doFilter()" value="اعمال فیلتر"  >
+                      <input data-toggle="tooltip" title="عدم اعمال فیلتر" class="buttonRed" title="" type="button" onclick="undoFilter()" value="اعمال فیلتر"  >
+
+                      <script>
+                        $(document).ready(function(){
+                            $('[data-toggle="tooltip"]').tooltip();
+                        });
+                      </script>
+                  </div>
 
               </form>
           </div>
@@ -106,12 +118,6 @@
           </div>
       </div>
   </div>
-
-<!--<div class="mapouter">-->
-    <!--<div class="gmap_canvas">-->
-        <!--<iframe width="600" height="500" id="gmap_canvas1" src="https://maps.google.com/maps?q=kelardsht&t=&z=19&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>-->
-    <!--</div>-->
-<!--</div>-->
 
 </body>
 
