--- a/app1/templates/villa.html
+++ b/app1/templates/villa.html
@@ -95,7 +95,7 @@
                   <script src="{% static 'api/filter/villaFilters.js' %}"></script>
                   <div>
                       <input data-toggle="tooltip" title="اعمال فیلتر" class="buttonGreen" type="button" onclick="doFilter()" value="اعمال فیلتر"  >
-                      <input data-toggle="tooltip" title="عدم اعمال فیلتر" class="buttonRed" title="" type="button" onclick="undoFilter()" value="اعمال فیلتر"  >
+                      <input data-toggle="tooltip" title="عدم اعمال فیلتر" class="buttonRed" title="" type="button" onclick="undoFilter()" value="عدم اعمال فیلتر"  >
 
                       <script>
                         $(document).ready(function(){
