--- a/app1/static/style.css
+++ b/app1/static/style.css
@@ -40,7 +40,7 @@
     }
 .bg {
     /* The image used */
-    background-image: url("http://127.0.0.1:8000/media/app1/photos/Mazichal1.jpeg");
+    /*background-image: url("http://127.0.0.1:8000/media/app1/photos/Mazichal1.jpeg");*/
 
     /* Full height */
     height: 100%;
@@ -149,6 +149,16 @@ h1 {
   font-size: 1.5rem;
   color: white;
   font: 16px 'b nazanin', sans-serif;
+}
+
+h2 {
+  text-align: center;
+  padding: 1.5rem 2.5rem;
+  background-image: linear-gradient(120deg, #fbc2eb 0%, #a6c1ee 100%);
+  margin: 0 0 2rem 0;
+  font-size: 1.5rem;
+  color: white;
+  font: 14px 'b nazanin', sans-serif;
 }
 
 img {
@@ -277,13 +287,13 @@ tr:hover {background-color:#f5f5f5;}
 
 @media screen and (min-width: 600px) {
   .card {
-    flex: 1 1 calc(100% - 2rem);
+    flex: 1 1 calc(33% - 2rem);
   }
 }
 
 @media screen and (min-width: 900px) {
   .card {
-    flex: 1 1 calc(100% - 2rem);
+    flex: 1 1 calc(33% - 2rem);
   }
 }
 
