update villa page2

--- a/app1/templates/villa.html
+++ b/app1/templates/villa.html
@@ -112,7 +112,7 @@
       <div>
           <div class="card-panel teal lighten-4">
               <div id ="bgDiv" class="bg">
-                <div id="root" class='container-card' >لیست ویلا ها</div>
+                <div id="root" class='container-card' ></div>
                 <script src="{% static 'api/villaDetails.js' %}"></script>
               </div>
           </div>
