--- a/app1/templates/villa.html
+++ b/app1/templates/villa.html
@@ -58,6 +58,9 @@
                   </div>
                   {% endif %}
                   </br>
+
+
+
                   <div class="row" style="font: 18px 'b nazanin', sans-serif; font-weight: bold; color:#000066;">
                       <div class="col s6">
                           <div style="height: 100px;">
@@ -109,7 +112,7 @@
           <div class="card-panel teal lighten-4">
               <div id ="bgDiv" class="bg">
                 <div id="root" class='container-card' ></div>
-                <script src="{% static 'api/villaDetails.js' %}"></script>
+                <script src="{% static 'api/filter/villaFilters.js' %}"></script>
               </div>
           </div>
       </div>
