--- a/app1/static/js-persian-cal.css
+++ b/app1/static/js-persian-cal.css
@@ -9,7 +9,7 @@ a.pcalBtn {
 	height: 18px;
 	vertical-align: bottom;
 	display: inline-block;
-	background-image: url( "calendarIcon.png" );
+	background-image: url( "pcal.png" );
 	background-repeat: no-repeat;
 	margin: 0 1px;
 }
