--- a/app1/templates/index.html
+++ b/app1/templates/index.html
@@ -108,7 +108,7 @@
 				   		</div>
 			   		</div>
 			   	</li>
-			   	<li style="background-image: url(/media/app1/photos/2.jpg);">
+			   	<li style="background-image: url(/media/app1/photos/mazandarantour.jpeg);">
 			   		<div class="overlay"></div>
 			   		<div class="container-fluid">
 			   			<div class="row">
@@ -121,7 +121,7 @@
 				   		</div>
 			   		</div>
 			   	</li>
-			   	<li style="background-image: url(/media/app1/photos/5.jpg);">
+			   	<li style="background-image: url(/media/app1/photos/khazarbeach.jpeg);">
 			   		<div class="overlay"></div>
 			   		<div class="container-fluids">
 			   			<div class="row">
