--- a/app1/templates/index.html
+++ b/app1/templates/index.html
@@ -23,6 +23,8 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+	<!--<link rel="stylesheet" type="text/css" href="{% static 'jabama.css' %}">-->
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="{% static 'css/animate.css' %}">
 	<!-- Icomoon Icon Fonts-->
