--- a/app1/templates/villa.html
+++ b/app1/templates/villa.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="{% static 'jspc-royal_blue.css' %}">
     <link rel="stylesheet" href="{% static 'main.css' %}">
 	<script type="text/javascript" src="{% static 'js-persian-cal.min.js' %}"></script>
-
+          <!-- AnyChart -->
+    <script src="https://cdn.anychart.com/releases/v8/js/anychart-base.min.js" type="text/javascript"></script>
        <!-- map -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
