comments for villa

--- a/app1/templates/villa.html
+++ b/app1/templates/villa.html
@@ -32,7 +32,7 @@
   <div>
       <div class="row" >
           <div class="col s1"></div>
-          <div class="col s10" style="background-color: #9BE1D0;">
+          <div class="col s10" style="background-color: #b2dfdb;">
               <form action="villa.html">
                   </br>
                   {% if villaCat_list %}
