--- a/app1/static/style.css
+++ b/app1/static/style.css
@@ -167,7 +167,18 @@ img {
   max-width: 100%;
   font: 16px 'b nazanin', sans-serif;
 }
-
+div {
+  display: block;
+  margin: 1rem auto;
+  max-width: 100%;
+  font: 16px 'b nazanin', sans-serif;
+}
+ifram {
+  display: block;
+  margin: 1rem auto;
+  max-width: 100%;
+  font: 16px 'b nazanin', sans-serif;
+}
 p {
   padding: 0 2.5rem 2.5rem;
   margin: 0;
