--- a/app1/templates/villa.html
+++ b/app1/templates/villa.html
@@ -7,14 +7,15 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <!-- Compiled and minified CSS -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+          <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
+          <!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">-->
       <!-- Compiled and minified JavaScript -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
           {% load static %}
       <title>Villa Details</title>
-      <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
       <link rel="stylesheet" href="{% static 'style.css' %}" >
+        <!-- jquery-->
+        <script type="text/javascript" src="{% static 'jquery-3.3.1.min.js' %}"></script>
         <!--calendar-->
     <link rel="stylesheet" href="{% static 'jspc-royal_blue.css' %}">
     <link rel="stylesheet" href="{% static 'main.css' %}">
