--- a/app1/templates/index.html
+++ b/app1/templates/index.html
@@ -97,7 +97,7 @@
 		<aside id="colorlib-hero">
 			<div class="flexslider">
 				<ul class="slides">
-			   	<li style="background-image: url(/media/app1/photos/Mazichal1.jpeg);">
+			   	<li style="background-image: url(/media/app1/photos/winteTour.jpg);">
 			   		<div class="overlay"></div>
 			   		<div class="container-fluid">
 			   			<div class="row">
