add status checkbox

--- a/app1/templates/villa.html
+++ b/app1/templates/villa.html
@@ -84,7 +84,17 @@
 
                           </div>
                       </div>
+                          <p class="col s5"/>
+                          <p class="col s5">
+                              <label style="font: 18px 'b nazanin', sans-serif; font-weight: bold; color:black; ">
+                                  <input id="statusCheckbox" class="with-gap" name="group1" type="checkbox">
+                                  <span>
+                                      خالی بودن کل بازه:
+                                  </span>
+                              </label>
+                          </p>
                   </div>
+
                   <script type="text/javascript">
                     var objCal1 = new AMIB.persianCalendar( 'pcal1',
                           { extraInputID: "fromdate"
@@ -111,7 +121,6 @@
           </div>
           <div class="col s1"></div>
       </div>
-
       <div>
           <div class="card-panel teal lighten-4">
               <div id ="bgDiv" class="bg">
