--- a/app1/static/style.css
+++ b/app1/static/style.css
@@ -104,6 +104,7 @@
     background-color: rgba(0, 80, 50, 0.3);
     font: 25px 'b nazanin', sans-serif;
     color: #004d40;
+    padding: 10px
     }
 
 .item{
@@ -904,4 +905,42 @@ tr:hover {background-color:#f5f5f5;}
 .post .post-footer .comments-list .comment > .comments-list {
   margin-left: 50px;
 }
+////////////////////popup form/////////////////
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(100,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
 
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 100%;
+  height: 100%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
