--- a/app1/templates/villa.html
+++ b/app1/templates/villa.html
@@ -55,7 +55,11 @@
                 <div id = "regiterDiv" class="row" style="padding-right: 20%; padding-left: 20%; display: none;">
                     <div class="col s6">
                         <label style="color: #2d3e52;font: 15px 'b nazanin', sans-serif;" >:نام کاربری</label><br>
-                        <label style="color: #2d3e52;font: 15px 'b nazanin', sans-serif;" >:رمز عبور  </label>
+                        <label style="color: #2d3e52;font: 15px 'b nazanin', sans-serif;" >:رمز عبور  </label><br>
+                        <label style="color: #2d3e52;font: 15px 'b nazanin', sans-serif;" >:نام کاربری</label><br>
+                        <label style="color: #2d3e52;font: 15px 'b nazanin', sans-serif;" >:نام کاربری</label><br>
+                        <label style="color: #2d3e52;font: 15px 'b nazanin', sans-serif;" >:نام کاربری</label><br>
+                        <label style="color: #2d3e52;font: 15px 'b nazanin', sans-serif;" >:نام کاربری</label><br>
                     </div>
                     <div class="col s6">
                         <input type="text" id="firstnameTxt" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
