--- a/app1/static/style.css
+++ b/app1/static/style.css
@@ -928,6 +928,7 @@ tr:hover {background-color:#f5f5f5;}
   border: 1px solid #888;
   width: 100%;
   height: 100%;
+  overflow: auto;
 }
 
 /* The Close Button */
