--- a/app1/templates/villa.html
+++ b/app1/templates/villa.html
@@ -33,7 +33,7 @@
 <body>
   <div>
       <div class="row" >
-          <button id="loginBtn" class="loginHeader">ورود</button>
+          <input id="loginBtn" type="button" class="loginHeader" value="ورود"/>
           <div id="myModal" class="modal">
               <!-- Modal content -->
               <div id = "loginForm" class="modal-content">
