--- a/app1/static/style.css
+++ b/app1/static/style.css
@@ -94,7 +94,7 @@
 .loginHeader {
     float: center;
     width: 100%;
-    background-color: rgba(0, 80, 50, 0.3);
+    background-color: green;
     font: 25px 'b nazanin', sans-serif;
     color: #004d40;
     }
