--- a/app1/templates/villa.html
+++ b/app1/templates/villa.html
@@ -48,13 +48,15 @@
                 </div>
                 <div id = "registerDiv" class="row" style="padding-right: 20%; padding-left: 20%; display: none;">
                     <div>
-                        <input type="text" placeholder="نام" id="firstnameTxt" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
-                        <input type="text" placeholder="نام خانوادگی" id="lastnameTxt" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
-                        <input type="text" placeholder="آدرس" id="address" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
-                        <input type="text" placeholder="تلفن" id="phonenumber" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
-                        <input type="text" placeholder="نام کاربری" id="usernameRegTxt" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
-                        <input type="password" placeholder="رمز عبور" id="passwordRegTxt" class="pdate" style="font: 15px 'b nazanin', sans-serif;">
-                        <input data-toggle="tooltip" title="اگه اطلاعاتتون رو تائید می کنید کلیک کنین" class="buttonGreen" type="button" onclick="login()" value="ادامه"  >
+                        <input type="text"                              id="userID" style="display:none;">
+                        <input type="text" placeholder="نام کاربری"     id="username" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
+                        <input type="password" placeholder="رمز عبور"   id="password" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
+                        <input type="text" placeholder="تلفن"           id="phonenumber" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
+                        <input type="text" placeholder="نام"            id="firstname" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
+                        <input type="text" placeholder="نام خانوادگی"   id="lastname" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
+                        <input type="text" placeholder="آدرس"           id="address" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
+
+                        <input data-toggle="tooltip" id = "registerUserDataBtn" title="اگه اطلاعاتتون رو تائید می کنید کلیک کنین" class="buttonGreen" type="button" value="ادامه"  >
                     </div>
                 </div>
               </div>
