--- a/app1/templates/villa.html
+++ b/app1/templates/villa.html
@@ -34,7 +34,7 @@
   <div>
       <div class="row" >
           <input id="loginBtn" type="button" class="loginHeader" value="ورود"/>
-          <div id="myModal" class="modal">
+          <form id="myModal" class="modal">
               <!-- Modal content -->
               <div id = "loginForm" class="modal-content">
                 <div><input id = 'closeLoginBtn' data-toggle="tooltip" class="close" type="button" value=" برگشت به برنامه... &times;"  > </div>
@@ -61,7 +61,7 @@
                 </div>
               </div>
               <script src="{% static 'login.js' %}"></script>
-          </div>
+          </form>
       </div>
       <div class="row" >
           <!--<div class="col s1"></div>-->
