--- a/app1/templates/villa.html
+++ b/app1/templates/villa.html
@@ -33,35 +33,36 @@
 <body>
   <div>
       <div class="row" >
-          <input id="loginBtn" type="button" class="loginHeader" value="ورود"/>
-          <form id="myModal" class="modal">
-              <!-- Modal content -->
-              <div id = "loginForm" class="modal-content">
-                <div><input id = 'closeLoginBtn' data-toggle="tooltip" class="close" type="button" value=" برگشت به برنامه... &times;"  > </div>
-                <div id = "loginDiv" class="row" style="padding-right: 20%; padding-left: 20%;">
-                    <div>
-                        <input type="text" placeholder="نام کاربری" id="usernameTxt" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
-                        <input type="password" placeholder="رمز عبور" id="passwordTxt" class="pdate" style="font: 15px 'b nazanin', sans-serif;">
-                        <input data-toggle="tooltip" title="وارد شوید" class="buttonGreen" type="button" onclick="login()" value="ورود"  >
-                        <input data-toggle="tooltip" title="هنوز ثبت نام نکردی؟!" class="buttonRed"  type="button" onclick="register()" value="ثبت نام"  >
-                    </div>
-                </div>
-                <div id = "registerDiv" class="row" style="padding-right: 20%; padding-left: 20%; display: none;">
-                    <div>
-                        <input type="text"                              id="userID" style="display:none;">
-                        <input type="text" placeholder="نام کاربری"     id="username" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
-                        <input type="password" placeholder="رمز عبور"   id="password" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
-                        <input type="text" placeholder="تلفن"           id="phonenumber" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
-                        <input type="text" placeholder="نام"            id="firstname" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
-                        <input type="text" placeholder="نام خانوادگی"   id="lastname" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
-                        <input type="text" placeholder="آدرس"           id="address" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
+          <a id="loginBtn" type="button" class="loginHeader" value="ورود" href="/accounts/login"> ورود
+          </a>
+          <!--<form id="myModal" class="modal">-->
+              <!--&lt;!&ndash; Modal content &ndash;&gt;-->
+              <!--<div id = "loginForm" class="modal-content">-->
+                <!--<div><input id = 'closeLoginBtn' data-toggle="tooltip" class="close" type="button" value=" برگشت به برنامه... &times;"  > </div>-->
+                <!--<div id = "loginDiv" class="row" style="padding-right: 20%; padding-left: 20%;">-->
+                    <!--<div>-->
+                        <!--<input type="text" placeholder="نام کاربری" id="usernameTxt" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>-->
+                        <!--<input type="password" placeholder="رمز عبور" id="passwordTxt" class="pdate" style="font: 15px 'b nazanin', sans-serif;">-->
+                        <!--<input data-toggle="tooltip" title="وارد شوید" class="buttonGreen" type="button" onclick="login()" value="ورود"  >-->
+                        <!--<input data-toggle="tooltip" title="هنوز ثبت نام نکردی؟!" class="buttonRed"  type="button" onclick="register()" value="ثبت نام"  >-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div id = "registerDiv" class="row" style="padding-right: 20%; padding-left: 20%; display: none;">-->
+                    <!--<div>-->
+                        <!--<input type="text"                              id="userID" style="display:none;">-->
+                        <!--<input type="text" placeholder="نام کاربری"     id="username" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>-->
+                        <!--<input type="password" placeholder="رمز عبور"   id="password" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>-->
+                        <!--<input type="text" placeholder="تلفن"           id="phonenumber" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>-->
+                        <!--<input type="text" placeholder="نام"            id="firstname" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>-->
+                        <!--<input type="text" placeholder="نام خانوادگی"   id="lastname" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>-->
+                        <!--<input type="text" placeholder="آدرس"           id="address" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>-->
 
-                        <input data-toggle="tooltip" id = "registerUserDataBtn" title="اگه اطلاعاتتون رو تائید می کنید کلیک کنین" class="buttonGreen" type="button" value="ادامه"  >
-                    </div>
-                </div>
-              </div>
-              <script src="{% static 'login.js' %}"></script>
-          </form>
+                        <!--<input data-toggle="tooltip" id = "registerUserDataBtn" title="اگه اطلاعاتتون رو تائید می کنید کلیک کنین" class="buttonGreen" type="button" value="ادامه"  >-->
+                    <!--</div>-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<script src="{% static 'login.js' %}"></script>-->
+          <!--</form>-->
       </div>
       <div class="row" >
           <!--<div class="col s1"></div>-->
