--- a/app1/templates/villa_new.html
+++ b/app1/templates/villa_new.html
@@ -25,11 +25,16 @@
 <script src="{% static 'metro-vibes-css/js/general.js' %}"></script>
 
 <!-- Include all needed stylesheets and scripts here -->
+    <!--customInput-->
     <script src="{% static 'metro-vibes-css/js/jquery.customInput.js' %}"></script>
-<!--calendar-->
+    <!--calendar-->
     <link rel="stylesheet" href="{% static 'jspc-royal_blue.css' %}">
     <link rel="stylesheet" href="{% static 'main.css' %}">
 	<script type="text/javascript" src="{% static 'js-persian-cal.min.js' %}"></script>
+    <!--slider-->
+    <script src="{% static 'metro-vibes-css/js/jquery.slider.bundle.js' %}"></script>
+    <script src="{% static 'metro-vibes-css/js/jquery.slider.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'metro-vibes-css/css/jslider.css' %}">
 
 
 
@@ -64,20 +69,26 @@
                            {% endif %}
                         </div>
                         <div class="inner clearfix">
-                            <div class="input_styled inlinelist pull-right col-sm-3">
-                                <input type="text" id="pcal2" class="pdate" style="font: 15px 'b nazanin', sans-serif;">
-                                <label style="color: #2d3e52;font: 15px 'b nazanin', sans-serif;" for="extra">تا تاریخ:</label><br>
-                                <input style="visibility:hidden" type="text" id="todate" class="pdate wide">
+                            <div class="">
+                                <div class="input_styled inlinelist pull-right col-sm-3">
+                                    <input type="text" id="pcal2" class="pdate" style="font: 15px 'b nazanin', sans-serif;">
+                                    <label style="color: #2d3e52;font: 15px 'b nazanin', sans-serif;" for="extra">تا تاریخ:</label><br>
+                                    <input style="visibility:hidden" type="text" id="todate" class="pdate wide">
+                                </div>
                             </div>
-                            <div class="input_styled inlinelist pull-right col-sm-3" >
-                                <input type="text" id="pcal1" class="pdate" style="font: 15px 'b nazanin', sans-serif;" >
-                                <label style="color: #2d3e52;font: 15px 'b nazanin', sans-serif;" for="extra">از تاریخ:</label><br>
-                                <input style="visibility:hidden" type="text" id="fromdate" class="pdate wide">
+                            <div class="">
+                                <div class="input_styled inlinelist pull-right col-sm-3" >
+                                    <input type="text" id="pcal1" class="pdate" style="font: 15px 'b nazanin', sans-serif;" >
+                                    <label style="color: #2d3e52;font: 15px 'b nazanin', sans-serif;" for="extra">از تاریخ:</label><br>
+                                    <input style="visibility:hidden" type="text" id="fromdate" class="pdate wide">
+                                </div>
                             </div>
-                            <div class="input_styled inlinelist pull-right col-sm-3">
-                                <div class="rowCheckbox">
-                                    <input title="خالی بودن کل بازه" name="signup" type="checkbox" id="statusCheckbox" >
-                                    <label for="statusCheckbox">خالی بودن کل بازه:</label>
+                            <div class="">
+                                <div class="input_styled inlinelist pull-right col-sm-3">
+                                    <div class="rowCheckbox">
+                                        <input title="خالی بودن کل بازه" name="signup" type="checkbox" id="statusCheckbox" >
+                                        <label for="statusCheckbox">خالی بودن کل بازه:</label>
+                                    </div>
                                 </div>
                             </div>
                             <script type="text/javascript">
@@ -90,6 +101,30 @@
                                       { extraInputID: "todate", extraInputFormat: "YYYY-MM-DD" }
                                  );
                             </script>
+                        </div>
+                        <div class="inner clearfix">
+                            <div class="col-sm-10">
+                                <div class="range-slider">
+                                    <input id="price_range" type="text" value="120;720">
+                                </div>
+                                <script type="text/javascript">
+                                    jQuery(document).ready(function($) {
+                                        $("#price_range").rangeslider({
+                                            from: 0,
+                                            to: 1000,
+                                            limits: false,
+                                            scale: ['$0', '$1000'],
+                                            heterogeneity: ['50/300'],
+                                            step: 10,
+                                            smooth: true,
+                                            dimension: '$'
+                                        });
+                                    });
+                                </script>
+                            </div>
+                            <div class="col-sm-2">
+                                <label for="price_range">بازه قیمت:</label>
+                            </div>
                         </div>
                         <div class="inner clearfix">
                             <a onclick="doFilter()" href="#" class="btn btn-green"><span style="font: 15px 'b nazanin', sans-serif;">فیلتر</span></a>
