--- a/app1/templates/villa_new.html
+++ b/app1/templates/villa_new.html
@@ -53,6 +53,50 @@
     <div class="content " role="main">
         <!-- row -->
         <div class="row">
+            <div class="col-sm-8">
+                <ul class="dropdown clearfix boxed">
+                    <li class="menu-level-0 first"><a href="#" hidefocus="true" style="outline: none;"><i class="icon-menu"></i><span>ورود</span></a></li>
+                    <li class="menu-level-0"><a href="#" hidefocus="true" style="outline: none;"><i class="icon-menu icon-menu2"></i><span>سفارش های من</span></a> </li>
+                    <li class="menu-level-0 last"><a href="#" hidefocus="true" style="outline: none;"><i class="icon-menu icon-menu4"></i><span>تنظیمات</span></a></li>
+                </ul>
+            </div>
+            <div class="col-sm-4">
+                <ul class="dropdown clearfix boxed">
+                    <a id="loginBtn" href="#" class="btn btn-small"><span>ورود</span></a>
+                    <!--<input  id="loginBtn" type="button" class="loginHeader" value="ورود"/>-->
+                    <form id="myModal" class="modal">
+                      <!-- Modal content -->
+                      <div id = "loginForm" class="modal-content">
+                        <div><input id = 'closeLoginBtn' data-toggle="tooltip" class="close" type="button" value=" برگشت به برنامه... &times;"  > </div>
+                        <div id = "loginDiv" class="row" style="padding-right: 20%; padding-left: 20%;">
+                            <div>
+                                <input type="text" placeholder="نام کاربری" id="usernameTxt" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
+                                <input type="password" placeholder="رمز عبور" id="passwordTxt" class="pdate" style="font: 15px 'b nazanin', sans-serif;">
+                                <input id="loginSubmit" data-toggle="tooltip" title="وارد شوید" class="buttonGreen" type="button" value="ورود" onclick="login()" >
+                                <input id="singnupShow" data-toggle="tooltip" title="هنوز ثبت نام نکردی؟!" class="buttonRed"  type="button"  value="ثبت نام"  onclick="register()">
+                                {# Assumes you setup the password_reset view in your URLconf #}
+                                <p style="text-align:center"><a href="{% url 'password_reset' %}">رمز عبور را فراموش کردید؟</a></p>
+                            </div>
+                        </div>
+                        <div id = "registerDiv" class="row" style="padding-right: 20%; padding-left: 20%; display: none;">
+                            <div>
+                                <input type="text"                              id="userID" style="display:none;">
+                                <input type="text" placeholder="نام کاربری"     id="username" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
+                                <input type="password" placeholder="رمز عبور"   id="password" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
+                                <input type="text" placeholder="ایمیل"          id="email" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
+                                <input type="text" placeholder="نام"            id="firstname" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
+                                <input type="text" placeholder="نام خانوادگی"   id="lastname" class="pdate" style="font: 15px 'b nazanin', sans-serif;"><br>
+
+                                <input data-toggle="tooltip" id = "registerUserDataBtn" title="اگه اطلاعاتتون رو تائید می کنید کلیک کنین" class="buttonGreen" type="button" value="ادامه"  >
+                            </div>
+                        </div>
+                      </div>
+                      <script src="{% static 'login.js' %}"></script>
+                    </form>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-sm-12">
                 <!-- Website Menu -->
                 <form action="villa_new.html" style="padding-right: 10px;">
@@ -137,10 +181,11 @@
         </div>
         <!-------------------------------------------->
 
-
-        <div id="root" class='container' ></div>
-        <script src="{% static 'api/filter/villa.js' %}"></script>
-        <!-------------------------------------------->
+        <div class="row">
+            <div id="root" class='container' ></div>
+            <script src="{% static 'api/filter/villa.js' %}"></script>
+            <!-------------------------------------------->
+        </div>
     </div>
 </div>
 </body>
